adding spackers page

--- a/igniteap/templates/uifiles/base.html
+++ b/igniteap/templates/uifiles/base.html
@@ -67,13 +67,9 @@
                 <!-- Start Navigation Area -->
                 <div class="navigation-area">
                     <ul class="main-menu nav">
-                        <li class="has-submenu"><a href="/">Home</a>
-                            
-                        </li>
-                        <li class="has-submenu"><a href="/about/">About Us</a>
-                        
-                        </li>
-                       
+                        <li class="has-submenu"><a href="/">Home</a></li>
+                        <li class="has-submenu"><a href="/about/">About Us</a></li>
+                        <li class="has-submenu"><a href="/speakers/">Speakers</a></li>
                         <li><a href="/contact/">Contact</a></li>
                     </ul>
                 </div>
