--- a/igniteap/templates/uifiles/base.html
+++ b/igniteap/templates/uifiles/base.html
@@ -112,7 +112,7 @@
                             "IGNITE".</p>
                     </div>
                     <div class="col-md-4 col-lg-6 text-md-end mt-sm-25">
-                        <a href="/contact/" class="btn-outline">Contact Us</a>
+                        <a href="/contact/" class="btn btn-warning">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -312,7 +312,7 @@ info@igniteap.com <br>
 
 <!--=== REVOLUTION JS ===-->
 <script src="{% static 'assets/js/revslider/rev-active.js' %}"></script>
-<script>
+<!-- <script>
         function updateCountdown() {
           var countdownDate = new Date("November 19, 2023 00:00:00").getTime();
           var now = new Date().getTime();
@@ -368,7 +368,7 @@ info@igniteap.com <br>
         }
         
         setInterval(updateCountdown, 1000);
-        </script>
+        </script> -->
 </body>
 
 </html>
