--- a/igniteap/static/assets/homecss/main.css
+++ b/igniteap/static/assets/homecss/main.css
@@ -312,7 +312,7 @@ body {
 
 @media only screen and (min-width: 1200px){
 .about-content {
-    margin-left: 55px
+    margin-left: 5px
 px
 ;
     padding-right: 0px;
@@ -462,10 +462,11 @@ px
     height:65px;
     
     color: #563B56;
-    font-size: 50px;
+    font-size: 65px!important;
     font-family: sans-serif;
-    line-height:45px;
+    line-height:75px!important;
     display: flex;
+    justify-content: center;
    
     /*background: green;*/
     overflow: hidden;
@@ -494,7 +495,7 @@ px
   }
   
   .tick {
-    line-height:43px;
+    line-height:62px;
   }
   
   .tick-hidden {
@@ -516,6 +517,7 @@ px
   
   .clock .days{
     border:3px solid #ebb4c0;
+    
   }
   .clock .hours{
     border:3px solid #ebb4c0;
@@ -534,20 +536,24 @@ px
   
   .labels div:nth-child(1) p {
     color: #6a5168;
+    font-size: large;
     margin: 0 5px;
   }
   
   .labels div:nth-child(2) p {
     color: #6a5168;
-    margin: 0 41px;
+    font-size: large;
+    margin: 0 35px;
   }
   .labels div:nth-child(3) p {
     color: #6a5168;
-    margin: 0 0px;
+    font-size: large;
+    margin: 0 5px;
   }
   .labels div:nth-child(4) p {
     color: #6a5168;
-    margin: 0 25px;
+    font-size: large;
+    margin: 0 5px;
   }
   
   @media only screen and (min-width: 320px) and (max-width: 560px) {
@@ -611,4 +617,74 @@ px
   margin-bottom: 10px;
   width: auto;
  
+}
+.btn-warning {
+  border-color: #fc7418;
+  background-color: #fc7418;
+  background-image: -webkit-gradient(linear, left top, right top, from(#fc7318), color-stop(#fe8415), color-stop(#fe9515), color-stop(#fea51a), to(#feb423));
+  background-image: linear-gradient(to right, #fc7318, #fe8415, #fe9515, #fea51a, #feb423);
+  border: 0px;
+  color: #fff!important;
+}
+.btn-warning {
+  --bs-btn-color: #000;
+  --bs-btn-bg: #fc7418;
+  --bs-btn-border-color: #fc7418;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #fc893b;
+  --bs-btn-hover-border-color: #fc822f;
+  --bs-btn-focus-shadow-rgb: 214, 99, 20;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #fd9046;
+  --bs-btn-active-border-color: #fc822f;
+  --bs-btn-active-shadow: none;
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #fc7418;
+  --bs-btn-disabled-border-color: #fc7418;
+}
+.btn {
+  --bs-btn-padding-x: 35px;
+  --bs-btn-padding-y: 18px;
+  --bs-btn-font-family: ;
+  --bs-btn-font-size: 0.9375rem;
+  --bs-btn-font-weight: 700;
+  --bs-btn-line-height: 1;
+  /* --bs-btn-color: #767988; */
+  --bs-btn-bg: transparent;
+  --bs-btn-border-width: 1px;
+  --bs-btn-border-color: transparent;
+  --bs-btn-border-radius: 8px;
+  --bs-btn-hover-border-color: transparent;
+  --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+  --bs-btn-disabled-opacity: 0.65;
+  --bs-btn-focus-box-shadow: 0 0 0 0 rgba(var(--bs-btn-focus-shadow-rgb), .5);
+  display: inline-block;
+  padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
+  font-family: var(--bs-btn-font-family);
+  font-size: var(--bs-btn-font-size);
+  font-weight: var(--bs-btn-font-weight);
+  line-height: var(--bs-btn-line-height);
+  color: var(--bs-btn-color);
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
+  border-radius: var(--bs-btn-border-radius);
+  background-color: var(--bs-btn-bg);
+  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+}
+
+
+.service-content-area {
+  margin-top: 0px!important;
+  position: relative;
+  z-index: 1;
 }
