fixed collaboration form

--- a/igniteap/templates/uifiles/base.html
+++ b/igniteap/templates/uifiles/base.html
@@ -70,6 +70,7 @@
                         <li class="has-submenu"><a href="/">Home</a></li>
                         <li class="has-submenu"><a href="/about/">About Us</a></li>
                         <li class="has-submenu"><a href="/speakers/">Speakers</a></li>
+                        <li class="has-submenu"><a href="/partners/">Partners</a></li>
                         <li><a href="/contact/">Contact</a></li>
                     </ul>
                 </div>
