--- a/igniteap/static/assets/homecss/main.css
+++ b/igniteap/static/assets/homecss/main.css
@@ -613,10 +613,14 @@ px
   }
 
 .panelist-card{
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin-bottom: 10px;
   width: auto;
- 
+  width: 300px;
+  display: flex !important; 
+  box-shadow: 0px 0.1px 4px;
+  padding: 10px;
+  border-radius: 5px;
 }
 .btn-warning {
   border-color: #fc7418;
