--- a/igniteap/templates/uifiles/collaborations.html
+++ b/igniteap/templates/uifiles/collaborations.html
@@ -4,7 +4,7 @@
 
 
 <!--== Start Page Header Area ==-->
-<div class="page-header-area bg-img" data-bg="{% static 'assets/img/page-header.jpg' %}">
+<div class="page-header-area bg-img" data-bg="{% static 'assets/img/patners.png' %}">
     <div class="container">
         <div class="row">
             <div class="col-lg-10 col-xl-8 m-auto text-center">
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="contact-content-wrap">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-7">
                     <div class="contact-form-area contact-method">
                         <h3 style="color: #0e0067;">Collaborations</h3>
 
@@ -124,8 +124,11 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4">
-                    <div class="contact-information contact-method user-register" style="background-color: #ffff;">
+                <div class="col-md-6 col-lg-5 order-0 order-md-1">
+                    
+                        <figure class="about-thumb">
+                            <img src="{% static 'assets/img/collaboration.jpg' %}" style="border-radius: 5px;" alt="Ignite-About"/>
+                        </figure>
                         <!-- <div class="contact-info-con">
                             <h3>Contact Info</h3>
 
@@ -143,7 +146,7 @@
                                 
                             </div>
                         </div> -->
-                    </div>
+                    
                 </div>
             </div>
         </div>
