--- a/igniteap/templates/uifiles/index.html
+++ b/igniteap/templates/uifiles/index.html
@@ -257,7 +257,7 @@
             <div class="row mtn-30">
                 <div class="col-sm-6 col-lg-4  ">
                     <!-- Start Service Item -->
-                    <div class="service-item ">
+                    <div class="service-item cards-service">
                         <figure class="service-thumb">
                             <a href="#"><img src="{% static 'assets/img/home/Impact.png' %}" alt="Businex-Service"></a>
 
@@ -279,7 +279,7 @@
 
                 <div class="col-sm-6 col-lg-4">
                     <!-- Start Service Item -->
-                    <div class="service-item">
+                    <div class="service-item cards-service">
                         <figure class="service-thumb">
                             <a href="#"><img src="{% static 'assets/img/home/network.png' %}" alt="Businex-Service"></a>
 
@@ -302,7 +302,7 @@
 
                 <div class="col-sm-6 col-lg-4">
                     <!-- Start Service Item -->
-                    <div class="service-item">
+                    <div class="service-item cards-service">
                         <figure class="service-thumb">
                             <a href="#"><img src="{% static 'assets/img/home/Learning.png' %}" alt="Businex-Service"></a>
 
@@ -324,7 +324,7 @@
 
                 <div class="col-sm-6 col-lg-4">
                     <!-- Start Service Item -->
-                    <div class="service-item">
+                    <div class="service-item cards-service">
                         <figure class="service-thumb">
                             <a href="#"><img src="{% static 'assets/img/home/Prize.png' %}" alt="Businex-Service"></a>
 
@@ -345,7 +345,7 @@
 
                 <div class="col-sm-6 col-lg-4">
                     <!-- Start Service Item -->
-                    <div class="service-item">
+                    <div class="service-item cards-service">
                         <figure class="service-thumb">
                             <a href="service-details.html"><img src="{% static 'assets/img/home/Fun.png' %}" alt="Businex-Service"></a>
 
@@ -367,7 +367,7 @@
 
                 <div class="col-sm-6 col-lg-4">
                     <!-- Start Service Item -->
-                    <div class="service-item">
+                    <div class="service-item cards-service">
                         <figure class="service-thumb">
                             <a href="service-details.html"><img src="{% static 'assets/img/home/Fun.png' %}" alt="Businex-Service"></a>
 
