--- a/igniteap/static/assets/homecss/main.css
+++ b/igniteap/static/assets/homecss/main.css
@@ -428,10 +428,11 @@ px
 }
 }
 
-.user-register{
-   background-image: url(../img/account/register.png);
+/* .user-register{
+   background-image: url(../img/collaboration.jpg);
+   background-size: cover;
    background-color: #FFFFFF;
-}
+} */
 
 .form-input-item .btn-submit {
     background-color: #0E0067;
@@ -537,23 +538,24 @@ px
   .labels div:nth-child(1) p {
     color: #6a5168;
     font-size: large;
-    margin: 0 5px;
+    margin: 0 10px;
   }
   
   .labels div:nth-child(2) p {
     color: #6a5168;
     font-size: large;
-    margin: 0 35px;
+    margin: 0 40px;
   }
   .labels div:nth-child(3) p {
     color: #6a5168;
     font-size: large;
-    margin: 0 5px;
+    margin: 0 0px;
   }
   .labels div:nth-child(4) p {
     color: #6a5168;
     font-size: large;
-    margin: 0 5px;
+    /* margin: 0 15px; */
+    margin:0px 0px 0px 25px;
   }
   
   @media only screen and (min-width: 320px) and (max-width: 560px) {
@@ -562,6 +564,7 @@ px
       /* margin-left: 26px; */
       /* margin-left:2%; */
       display:flex;
+      max-width: 300px!important;
       justify-content: center;
      
    
@@ -691,4 +694,12 @@ px
   margin-top: 0px!important;
   position: relative;
   z-index: 1;
+}
+
+
+.cards-service{
+  border-radius: 1.2rem!important;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px!important;
+  transition: all 0.2s!important;
+  border: 1px solid #FFFFFF!important;
 }
