--- a/igniteap/templates/uifiles/login.html
+++ b/igniteap/templates/uifiles/login.html
@@ -4,7 +4,7 @@
 
 
 <!--== Start Page Header Area ==-->
-<div class="page-header-area bg-img" data-bg="{% static 'assets/img/page-header.jpg' %}">
+<div class="page-header-area bg-img" data-bg="{% static 'assets/img/login.png' %}">
     <div class="container">
         <div class="row">
             <div class="col-lg-10 col-xl-8 m-auto text-center">
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="contact-content-wrap">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-7">
                     <div class="contact-form-area contact-method">
                         <h3 style="color: #0e0067;">User Login</h3>
 
@@ -55,8 +55,11 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4">
-                    <div class="contact-information contact-method user-register" style="background-color: #ffff;">
+                <div class="col-md-6 col-lg-5 order-0 order-md-1">
+                    
+                    <figure class="about-thumb">
+                        <img src="{% static 'assets/img/account/login.jpeg' %}" style="border-radius: 5px;" alt="Ignite-About"/>
+                    </figure>
                        
                     </div>
                 </div>
