--- a/igniteap/templates/uifiles/speakers.html
+++ b/igniteap/templates/uifiles/speakers.html
@@ -4,7 +4,7 @@
 
 
 <!--== Start Page Header Area ==-->
-<div class="page-header-area bg-img" data-bg="{% static 'assets/img/contact-banner.png' %}">
+<div class="page-header-area bg-img" data-bg="{% static 'assets/img/speakers.png' %}">
     <div class="container">
         <div class="row">
             <div class="col-lg-10 col-xl-8 m-auto text-center">
