--- a/igniteap/templates/uifiles/base.html
+++ b/igniteap/templates/uifiles/base.html
@@ -131,7 +131,7 @@
                     <div class="widget-item">
                         <div class="about-widget footer-logo">
                             <a href="/"><img src="{% static 'assets/img/ignite-ap-main-footer-logo.png' %}" alt="Logo"/></a>
-                            <p>Ignite represents a dynamic movement that unites the most brilliant minds and passionate problem-solvers from every corner of our state.</p>
+                            <p class="text-medium">Ignite represents a dynamic movement that unites the most brilliant minds and passionate problem-solvers from every corner of our state.</p>
 
                             <div class="copyright-txt">
                                 <p>&copy;
