--- a/igniteap/templates/uifiles/about.html
+++ b/igniteap/templates/uifiles/about.html
@@ -70,7 +70,7 @@ landscape as a whole.
                 <div class="about-content">
                     <!-- <h6>Our Services</h6> -->
                     <h2>About <span>IGNITE</span></h2>
-                    <p style="text-align: justify;"><strong>IGNITE</strong> isn't merely a word, nor is it just another event; it
+                    <p class="text-medium"><strong>IGNITE</strong> isn't merely a word, nor is it just another event; it
                         embodies a metaphor for igniting creativity, enthusiasm, and
                         innovation. It represents a dynamic movement that unites
                         the most brilliant minds and passionate problem-solvers
@@ -96,7 +96,7 @@ landscape as a whole.
                 <div class="section-title mb-0">
                     <!-- <h6>TESTIMONIALS</h6> -->
                     <h2>About<br><span>WissionTalks</span></h2>
-                    <p style="text-align: justify;"><strong>WissionTalks</strong>, an initiative by "Wissionarie," is committed to
+                    <p class="text-medium"><strong>WissionTalks</strong>, an initiative by "Wissionarie," is committed to
                         reshaping the future of entrepreneurship by inspiring and guiding the
                         young generation towards a purposeful vision. This platform nurtures
                         passion and empowers it to evolve into thriving businesses.
@@ -117,8 +117,9 @@ landscape as a whole.
                             </div>
 
                             <div class="testimonial-txt">
+                                <h2>Vision</h2>
                                 <!-- <img src="{% static 'assets/img/icons/quote.png' %}" alt="Ignite"/> -->
-                                <p>"WissionTalks" is dedicated to redefining entrepreneurship through
+                                <p class="text-medium">"WissionTalks" is dedicated to redefining entrepreneurship through
                                     experiential learning, providing a platform for individuals with creative
                                     and innovative ideas to turn their passion into tangible reality.
                                     </p>
@@ -150,8 +151,9 @@ landscape as a whole.
                             </div>
 
                             <div class="testimonial-txt">
+                                <h2>Mission</h2>
                                 <!-- <img src="{% static 'assets/img/icons/quote.png' %}" alt="Ignite"/> -->
-                                <p>The organization's primary mission is to connect aspiring individuals
+                                <p class="text-medium">The organization's primary mission is to connect aspiring individuals
                                     with the dynamic startup culture, closing the gap between
                                     enthusiasm and entrepreneurial reality.
                                     </p>
@@ -176,7 +178,7 @@ landscape as a whole.
                 <div class="col-lg-6 col-xl-5 m-auto text-center">
                     <div class="section-title section-title--light">
                         <h2>Social <span>Cause</span></h2>
-                        <p style="color: #f3f3f3;">IGNITE Ideathon is more than just an event; it's a passionate call to action for positive social 
+                        <p class="text-medium" style="color: #f3f3f3;">IGNITE Ideathon is more than just an event; it's a passionate call to action for positive social 
                             change. </p>
                         <!-- <h4 class="mb-0">We make it simple, providing best solutions</h4> -->
                     </div>
@@ -502,7 +504,87 @@ landscape as a whole.
                 </div>
             </div>
 
-            <div class="row mtn-sm-60 mtn-md-5">
+
+            <div class="row mtn-35">
+                <div class="col-md-6 col-lg-6">
+                    <div class="blog-item">
+                        <div class="blog-content">
+                            <h2 class="h5"><a href="blog-details.html">Project Expo</a></h2>
+                            <p>A Project Expo is a platform for showcasing innovative projects and ideas, promoting 
+                                collaboration, and inspiring future innovations across various fields </p>
+    
+                            <!-- <div class="blog-meta">
+                                <a href="#">By: Albert Max</a>
+                                <a href="#">May 01, 2019</a>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="col-md-6 col-lg-6">
+                    <div class="blog-item">
+                        <div class="blog-content">
+                            <h2 class="h5"><a href="blog-details.html">Startup Expo</a></h2>
+                            <p>A Startup Expo is an energetic event celebrating entrepreneurship and innovation, where 
+                                emerging businesses and startups showcase their offerings to a diverse audience. </p>
+    
+                            <!-- <div class="blog-meta">
+                                <a href="#">By: Mohin Smith</a>
+                                <a href="#">May 03, 2019</a>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-md-6 col-lg-6">
+                    <div class="blog-item">
+                        <div class="blog-content">
+                            <h2 class="h5"><a href="blog-details.html">Investor Pitch</a></h2>
+                            <p>An Investor Pitch Event is a crucial occasion where startups pitch their business ideas to 
+                                potential investors.</p>
+    
+                            <!-- <div class="blog-meta">
+                                <a href="#">By: Mohin Smith</a>
+                                <a href="#">May 03, 2019</a>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-6">
+                    <div class="blog-item">
+                        <div class="blog-content">
+                            <h2 class="h5"><a href="blog-details.html">Idea Pitch</a></h2>
+                            <p>An Idea Pitch is a succinct presentation that introduces and advocates for a new concept or 
+                                project. </p>
+    
+                            <!-- <div class="blog-meta">
+                                <a href="#">By: Mohin Smith</a>
+                                <a href="#">May 03, 2019</a>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+    
+                <!-- <div class="col-md-6 col-lg-4">
+                    <div class="blog-item">
+                        <div class="blog-content">
+                            <h2 class="h5"><a href="blog-details.html">Corporate Conference 2019</a></h2>
+                            <p>We have great creative team they always ready
+                                to helped you. voluptatem quiase voluptase
+                                aspernatur auted fugit</p>
+    
+                            <div class="blog-meta">
+                                <a href="#">By: Raju Ahammad</a>
+                                <a href="#">May 04, 2019</a>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+
+
+
+            <!-- <div class="row mtn-sm-60 mtn-md-5">
                 <div class="col-lg-6 mb-5">
                     <div class="icon-box-item">
                         <div class="icon-box__icon">
@@ -557,7 +639,7 @@ landscape as a whole.
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </div>
